--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>ID Card Generator</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -51,6 +51,6 @@
 </div>
 </div>
 
- <script src="script.js"></script>
+ <script src="job.js"></script>
 </body>
 </html>
